force-app/main/default/objects/Notiforce_IF_LOG__c/Notiforce_IF_LOG__c.object-meta.xml
<CustomObject>
    <description>Notiforce 인터페이스 로그</description>
    <label>Noriforce IF LOGs</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{0000000000}</displayFormat>
        <label>IF LOG No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Noriforce IF LOGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>