force-app/main/default/objects/Notiforce_IF_LOG__c/fields/IFDATE__c.field-meta.xml
<CustomField>
    <fullName>IFDATE__c</fullName>
    <description>false</description>
    <label>IFDATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>