force-app/main/default/objects/Notiforce_IF_LOG__c/fields/IFID__c.field-meta.xml
<CustomField>
    <fullName>IFID__c</fullName>
    <description>외부 IF ID - IF INFO와 Mapping</description>
    <label>External IFID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>