force-app/main/default/objects/Notiforce_IF_LOG__c/fields/LOG_TYPE__c.field-meta.xml
<CustomField>
    <fullName>LOG_TYPE__c</fullName>
    <label>LOG_TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SND</fullName>
            </value>
            <value>
                <fullName>RCV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>