force-app/main/default/objects/Notiforce_IF_LOG__c/fields/Notiforce_IF_INFO__c.field-meta.xml
<CustomField>
    <fullName>Notiforce_IF_INFO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IF 정보</description>
    <label>Notiforce IF INFOs</label>
    <referenceTo>Notiforce_IF_INFO__c</referenceTo>
    <relationshipLabel>Noriforce IF LOGs</relationshipLabel>
    <relationshipName>Notiforce_IF_LOG</relationshipName>
    <type>Lookup</type>
</CustomField>