force-app/main/default/objects/Notiforce_IF_LOG__c/fields/OERRORCODE__c.field-meta.xml
<CustomField>
    <fullName>OERRORCODE__c</fullName>
    <description>false</description>
    <label>OERRORCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>