force-app/main/default/objects/Notiforce_IF_LOG__c/fields/OIFID__c.field-meta.xml
<CustomField>
    <fullName>OIFID__c</fullName>
    <description>false</description>
    <label>OIFID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>