force-app/main/default/objects/Notiforce_IF_LOG__c/fields/OMSGSTATUS__c.field-meta.xml
<CustomField>
    <fullName>OMSGSTATUS__c</fullName>
    <description>false</description>
    <label>OMSGSTATUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>