force-app/main/default/objects/Notiforce_IF_LOG__c/fields/Processing_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Processing_End_Time__c</fullName>
    <description>false</description>
    <label>Processing_End_Time</label>
    <type>DateTime</type>
</CustomField>