force-app/main/default/objects/Notiforce_IF_LOG__c/fields/Response_from_DIH_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_from_DIH_Time__c</fullName>
    <description>false</description>
    <label>Response_from_DIH_Time</label>
    <type>DateTime</type>
</CustomField>