force-app/main/default/objects/Notiforce_IF_LOG__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Notiforce_IF_INFO__c</columns>
    <columns>IFDATE__c</columns>
    <columns>IFID__c</columns>
    <columns>LOG_TYPE__c</columns>
    <columns>MSGGUID__c</columns>
    <columns>OIFDATE__c</columns>
    <columns>OMSGSTATUS__c</columns>
    <columns>OERRORCODE__c</columns>
    <columns>OERRORTEXT__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OIFID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fm_InternalIFID__c</field>
        <operation>equals</operation>
        <value>IF_SFDC_SEMA_0005</value>
    </filters>
    <label>All</label>
</ListView>