force-app/main/default/objects/Notiforce_IF_LOG__c/listViews/Read_timeout.listView-meta.xml
<ListView>
    <fullName>Read_timeout</fullName>
    <columns>MSGGUID__c</columns>
    <columns>NAME</columns>
    <columns>Notiforce_IF_INFO__c</columns>
    <columns>IFDATE__c</columns>
    <columns>IFID__c</columns>
    <columns>OMSGSTATUS__c</columns>
    <columns>OERRORCODE__c</columns>
    <columns>OERRORTEXT__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>OIFID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OMSGSTATUS__c</field>
        <operation>equals</operation>
        <value>E</value>
    </filters>
    <filters>
        <field>IFID__c</field>
        <operation>startsWith</operation>
        <value>IF_CN_CXP</value>
    </filters>
    <filters>
        <field>OERRORCODE__c</field>
        <operation>equals</operation>
        <value>System.CalloutException</value>
    </filters>
    <label>CalloutException</label>
</ListView>